--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filmferret",
-  "homepage": "https://skelleher2.github.io/roboferret",
+  "homepage": "https://skelleher2.github.io/RoboFerret",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,12 +13,13 @@
     "tachyons": "^4.12.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": "react-app"
