--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "filmferret",
+  "homepage":"https://skelleher2.github.io/RoboFerret/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -14,10 +14,8 @@
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "browserslist": {
     "production": [
